# just-rust

./: .gitignore  Cargo.toml
actix-gcd/src/: main.rs
collection_example/: Cargo.toml
collection_example/src/: main.rs  map_example.rs
crossbeam-example/: Cargo.toml
crossbeam-example/src/: main.rs
crypto/: Cargo.toml
crypto/src/: aead_test.rs  agreement_test.rs  ed25519_sign.rs  hmac_test.rs  main.rs  private_key.der  public_key.der  rsa_sign.rs
echo/: Cargo.toml
echo/src/: main.rs
error_example/: Cargo.toml
error_example/src/: main.rs
etcd/: Cargo.toml
etcd/src/: key_value.rs  lease.rs  lock.rs  main.rs  watch.rs
hello-axum/: .env  Cargo.toml  web.db
hello-axum/.sqlx/: query-0c9f6c5aee1ea5c78661c911762b9447641bc7779958db287fe076230b9bd5ce.json  query-0f4bc58d2085c8083722d16060d4df870bab119fb987f8273ea1abe928b27b18.json  query-476b544c6c2a594ef9bc2610fdb228ae5969a5fe8db4c3bafdabd4131bfc1656.json  query-5ce70f74ac38543d51dc46a86d838f083eb5cce2604e6cea0b2e8f993d6de01e.json  query-7befe4ffce5c818e8733d9a6c5b91062a752934fe0966cb359b63ce319f94fe1.json  query-a1c173378f669f369efdd5d247112f958d705e153f2300e93ac15dfa280efd4e.json  query-bf1ee72b6e7695ec71fc4053314ce193438a0ef3539af564fca75b3b8e3d8759.json  query-df294987831b9936e7e75d9f6d7d59c8b2aba07ff03cd41978d6fa509ff95d28.json
hello-axum/migrations/: 20250106054733_user.sql  20250107015057_user.sql  20250116070820_add_user.sql  20250121020746_init.sql  user.sql
hello-axum/src/: main.rs  user.rs  web.rs
hello-axum/src/web/: auth.rs  role.rs  user.rs  user_role.rs
just-test/: Cargo.toml
just-test/src/: main.rs
just-test/src/my/: one.rs
leetcode/src/: two_sum.rs
macro_example/: Cargo.toml
map-reduce/: Cargo.toml
map-reduce/src/: main.rs
my-redis/: Cargo.toml
my-redis/examples/: fuck-redis.rs
my-redis/src/: main.rs
proxy/: Cargo.toml
proxy/src/: main.rs
rayon-example/: Cargo.toml
rayon-example/src/: main.rs
serde-example/: Cargo.toml
serde-example/src/: main.rs
sqlx-example/: .env  Cargo.toml
sqlx-example/src/: main.rs
web-server/: Cargo.toml
web-server/src/: main.rs
