[workspace]
resolver = "2"
members = ["just-test", "leetcode", "map-reduce", "echo", "proxy", "my-redis", "hello-axum","web-server","etcd","crypto", "crossbeam-example", "rayon-example", "serde-example", "error_example", "collection_example", "macro_example", "sqlx-example"]
[workspace.dependencies]
tokio ={ version = "1.40.0"}
