[package]
name = "hello-axum"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.9"
tokio = { workspace = true, features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0.94"
futures = "0.3.31"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
