[package]
name = "hello-axum"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.8",features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = {version = "0.10.0",features = ["typed-header"]}
