[package]
name = "hello-axum"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.8",features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite","chrono","uuid"] }
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = {version = "0.10.0",features = ["typed-header"]}
jsonwebtoken = "9.3.0"
tower-http = { version = "0.6.2", features = ["trace"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.12.0", features = ["v4","fast-rng","macro-diagnostics"] }
