[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
futures = { version = "0.3.29", features = ["thread-pool"]}
tokio-util = "0.7.10"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
etcd-client = "0.12.3"
