[package]
name = "sqlx-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "tls-rustls-ring"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
features = "0.10.0"

